fix: added overflow-y auto mod

--- a/src/components/ui/TemplateList/TemplateList.module.css
+++ b/src/components/ui/TemplateList/TemplateList.module.css
@@ -1,10 +1,10 @@
 .templateList{
-    overflow-y:auto;
     margin: 0;
     background-color: #002154;
     height: 100%;
     max-height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .templateItem{
